Published player working with Brightcove.

--- a/sample/index.html
+++ b/sample/index.html
@@ -23,15 +23,20 @@ body{
 
 
 <div id="videoWrap" class="box">
-<video data-account="4523394953001" 
+
+<video data-video-id="5652998937001" 
+data-account="4523394953001" 
 data-player="SJlLuGsOkM" 
 data-embed="default" 
 data-application-id 
 class="video-js" 
 controls></video>
 <script src="//players.brightcove.net/4523394953001/SJlLuGsOkM_default/index.min.js"></script>
-</div>
 
+</div>
+<!--
+//preview-players.brightcove.net/v2/accounts/4523394953001/players/SJlLuGsOkM/preview/embeds/default/master/index.html
+-->
 <script type="text/javascript"
  src="../ovv-lib/openvv.js"></script>
 
