Integration of older sample code, layout.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1>OpenVV-HTML5</h1>
 <ul>
 <li>
-<a href="sample/index.html">Sample</a>
+<a href="sample/index.html">Sample Test Page for OpenVV HTML5</a>
 </li>
 </ul>
 </body>
