--- a/sample/index.html
+++ b/sample/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>OpenVV-HTML5: Sample Page One</title>
 <link href="//players.brightcove.net/videojs-overlay/lib/videojs-overlay.css" rel='stylesheet'>
+<link rel="stylesheet" href="includes/css/main.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="includes/css/viewability.css" type="text/css" />
             
 <style type="text/css">
 body{
@@ -25,8 +27,30 @@ body{
   
 </head>  
 <body>
+	<header>
+	<div class="header">
+<img class="logo floatLeft" src="img/ovv_logo.png" style="width:89px;height:100px;float:left;align:left;" />	
 <h1>Sample of OpenVV-HTML5</h1>
+<div style="height:25px;"></div>
+<br />
+	</div>
+	</header>
 
+	<div class="quartileViewWrapper chip_shadow">
+		<div class="title underlined">
+			<h3>Quartile Viewability</h3>
+		</div>
+		<div id="ovvQuartileViewValues" class="scrollContent"></div>
+	</div>
+
+	<div class="viewEngineDataWrapper chip_shadow">
+		<div class="title underlined">
+			<h3>View Engine Data</h3>
+		</div>
+		<div id="calculatedViewData" class="scrollContent"></div>
+	</div>
+
+<div id='chip_events' style="margin-top:120px;" class='chip_section'> </div>
 
 <div id="videoWrap" class="box" >
 
@@ -41,6 +65,11 @@ controls></video>
 <script src="//players.brightcove.net/4523394953001/SJlLuGsOkM_default/index.min.js"></script>
 
 </div>
+
+<div id="dataViewWrapper" class="dataViewBlock">
+<div id="ovvParamValues" ></div>
+
+
 <!--
 //preview-players.brightcove.net/v2/accounts/4523394953001/players/SJlLuGsOkM/preview/embeds/default/master/index.html
 -->
@@ -93,5 +122,66 @@ openvv
   
   });
 </script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<script src="js/ovvtest_core.js" type="text/javascript"></script>
+<script src="js/ovvtest_viewEngine.js" type="text/javascript"></script>
+<script src="js/ovvtest_player.js" type="text/javascript"></script>
+<script type="text/javascript">
+
+// init things
+(function(){
+	window.addEventListener("load", function load(event){
+		window.removeEventListener("load", load, false); //remove listener, no longer needed
+//		positionPlayer();
+		// if (typeof(buildPlayer) === 'function') buildPlayer();
+		
+		// TODO: Clean up and consolidate the initialization code
+		
+		var viewReached = function(vals){
+			console.log('[OVV VIEW ENGINE] Viewability Reached');
+			console.log(vals);
+			
+			var el = document.getElementById('calculatedViewData');
+			el.innerHTML = 'Viewability parameters reached <br /> MS: ' + vals.viewTime;
+		}
+		
+		ovvtest.setOptions({ 
+			adId: 'my_ovv_test_ad_id', 
+			quartileValuesOutputElem: 'ovvQuartileViewValues',
+			enableViewEngine: true,
+			viewabilityReached: viewReached
+		});
+		// Build the info output window
+		ovvtest.buildInfoWindow('ovvParamValues');		
+		ovvtest.player.setPlayer('flowplayer');
+		ovvtest.player.initPlayer('player');
+		
+		// Attach our listeners through javascript
+		ovvtest.init();
+		
+		
+		/*
+		// Attach a debug version of OVVAsset.js
+		// debug scr
+		var debugovvsrc = 'scrip' + 'ts/debug/OVVAsset.js';
+		// var debugovv = '<scr' + 'ipt src="scrip' + 'ts/debug/OVVAsset.js" type="text/jav' + 'ascr' + 'ipt"></sc' + 'ript>'
+		
+		setTimeout(function(){
+			var tag = document.createElement('SCRIPT');
+			tag.setAttribute('src', debugovvsrc);
+			
+			document.body.appendChild(tag);
+		
+		}, 500);
+		*/
+		
+	},false);
+})();
+
+
+</script>
+
 </body>
 </html>
