Integration of previous test view engine and demo page.

--- a/sample/index.html
+++ b/sample/index.html
@@ -77,31 +77,7 @@ controls></video>
  src="../ovv-lib/openvv.js"></script>
 
 <script type="text/javascript">
-// Create new instance of OpenVV and store element to measure
-var openvv = new OpenVV(), element = document.getElementById('videoWrap');
 
-openvv
-  .measureElement(element)
-  .onViewableStart(function(args) {
-    // element has started being viewable according to the default threshold of 50% in view
-    console.log('Viewable Start', new Date().toString(), args);
-  })
-  .onViewableStop(function(args) {
-    // element has stopped being viewable as it has dropped below the default 50% in view threshold
-    console.log('Viewable Stop', new Date().toString(), args);
-  })
-  .onViewableChange(function(args){
-    // element's in view percentage has changed. Will be called whenever element's in view percentage changes
-    console.log('Viewable Change', new Date().toString(), args);
-  })
-  .onViewableComplete(function(args) {
-    // element has been in view above the viewable threshold for atleast 2 continuous seconds
-    console.log('Viewable Complete', new Date().toString(), args);
-  })
-  .onUnmeasureable(function() {
-    // no measurement techniques were found that are capable of measuring in the current enviroment (browser + iframe context)
-    console.log('Unmeasureable');
-  });
 </script>
 
 <script src="//players.brightcove.net/videojs-overlay/lib/videojs-overlay.js"></script>
@@ -148,34 +124,16 @@ openvv
 		}
 		
 		ovvtest.setOptions({ 
-			adId: 'my_ovv_test_ad_id', 
+			adElem: 'videoWrap', 
 			quartileValuesOutputElem: 'ovvQuartileViewValues',
 			enableViewEngine: true,
 			viewabilityReached: viewReached
 		});
 		// Build the info output window
-		ovvtest.buildInfoWindow('ovvParamValues');		
-		ovvtest.player.setPlayer('flowplayer');
-		ovvtest.player.initPlayer('player');
+		ovvtest.buildInfoWindow('ovvParamValues');
 		
 		// Attach our listeners through javascript
 		ovvtest.init();
-		
-		
-		/*
-		// Attach a debug version of OVVAsset.js
-		// debug scr
-		var debugovvsrc = 'scrip' + 'ts/debug/OVVAsset.js';
-		// var debugovv = '<scr' + 'ipt src="scrip' + 'ts/debug/OVVAsset.js" type="text/jav' + 'ascr' + 'ipt"></sc' + 'ript>'
-		
-		setTimeout(function(){
-			var tag = document.createElement('SCRIPT');
-			tag.setAttribute('src', debugovvsrc);
-			
-			document.body.appendChild(tag);
-		
-		}, 500);
-		*/
 		
 	},false);
 })();
