Link to innovid sample

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <li>
 <a href="sample/index.html">Sample Test Page for OpenVV HTML5</a>
 </li>
+<li>
+<a href="http://preview.innovid.com/tag/v2/index.html" target="_blank">InnoVid Preview Player Sample</a>
+</li>
 </ul>
 </body>
 </html>
